# ipc_example

shm/: .gitignore  CMakeLists.txt
shm/inc/: shareinfo.h
shm/shm_r/: shm_r.c
shm/shm_w/: shm_w.c
